--- a/index.html
+++ b/index.html
@@ -197,7 +197,8 @@
                                 <div class="desc">
                                     <h5 class="text-uppercase color-dark text-bold">Asta the World Traveling Woofer Visits Iceland</h5>
                                     <h5 class="text-uppercase color-dark">Author</h5>
-                                    <p>Asta, an amazing little pup, travels the world and shares her adventures with children through these sweet books. In the first book, she travels around the wondrous island nation of Iceland in the beautiful, if chilly, north. She tells children about the new things she finds like the foods, animals, and geography of Iceland- and encourages them to travel themselves.</p>
+                                    <p>Asta, an amazing little pup, travels the world and shares her adventures with children through these sweet books. In the first book, she travels around the wondrous island nation of Iceland in the beautiful, if chilly, north. She tells children about the new things she finds like the foods, animals, and geography of Iceland- and encourages them to travel themselves.  😀 😀
+                                    </p>
                                 </div>
                             </li><li>
                                 <div class="ic">
