--- a/index.html
+++ b/index.html
@@ -431,6 +431,26 @@
                      <div class="ic">
                         <i class="fa fa-lg fa-flag-checkered"></i>
                     </div>
+                     <div class="number font-alt">2024</div>
+                     <div class="desc">
+                          <h5 class="text-uppercase color-dark text-bold">24 Hours of LeMons</h5>
+                          <h5 class="text-uppercase color-dark">Driver</h5>
+                          <p>The 24 Hours of Lemons race is an exciting mix of endurance, fun, and skill, with a heavy dose of humor and adaptability. Unlike traditional endurance racing, Lemons racing is centered on taking low-budget "lemon" cars—often valued at $500 or less—and pushing them through a grueling race. In the end, a 24 Hours of Lemons driver is equal parts racer, entertainer, and caretaker. Winning isn’t the main focus—it’s all about surviving the race, having a blast, and embracing the absurdity.</p>
+                     </div>
+                </li><li>
+                     <div class="ic">
+                        <i class="fa fa-lg fa-flag-checkered"></i>
+                    </div>
+                     <div class="number font-alt">2024</div>
+                     <div class="desc">
+                          <h5 class="text-uppercase color-dark text-bold">Lotus Owners Group - 43rd Annual Gathering</h5>
+                          <h5 class="text-uppercase color-dark">Event Planner/Manager</h5>
+                          <p>Initially in the role of banquet chair, I quickly stepped in wherever my expertise was needed. Using my team and event management skills, I took the initiative to develop an Excel-based organizer, which significantly streamlined our manpower assignments. Managing every aspect from designing and building banquet centerpieces, training fellow staff on the use of various forms of IT to use A/V technology and receive payments for activities and merchandise, to ensuring every member signed all necessary safety waivers for multiple driving events, I jumped in with both feet to help in any way I could. Ensuring that every aspect of the event— from the meet and greet that kicked off the proceedings to the two banquets— was flawlessly executed.</p>
+                     </div>
+                </li> <li>
+                     <div class="ic">
+                        <i class="fa fa-lg fa-flag-checkered"></i>
+                    </div>
                      <div class="number font-alt">2023</div>
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">FF1S Podcast</h5>
