update index with F1

--- a/index.html
+++ b/index.html
@@ -462,6 +462,16 @@
                      <div class="ic">
                         <i class="fa fa-lg fa-flag-checkered"></i>
                     </div>
+                     <div class="number font-alt">2023/24</div>
+                     <div class="desc">
+                          <h5 class="text-uppercase color-dark text-bold">Formula 1</h5>
+                          <h5 class="text-uppercase color-dark">Intervention Marshal</h5>
+                          <p>These often unsung volunteers are responsible for the safety and security of the action on track, being responsible for the drivers who are competing, and making sure members of the public stay at a safe distance. Marshals are right up close to the action, and are a vital part of anything that happens on track.r, and caretaker. Winning isn’t the main focus—it’s all about surviving the race, having a blast, and embracing the absurdity.</p>
+                     </div>
+                </li><li>
+                     <div class="ic">
+                        <i class="fa fa-lg fa-flag-checkered"></i>
+                    </div>
                      <div class="number font-alt">2022</div>
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">CIRCUIT OF THE AMERICAS</h5>
@@ -473,7 +483,7 @@
                      <div class="ic">
                         <i class="fa fa-lg fa-motorcycle"></i>
                     </div>
-                     <div class="number font-alt">22/23</div>
+                     <div class="number font-alt">2022/23</div>
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">MotoGP</h5>
                           <h5 class="text-uppercase color-dark">MotoGP Flag Race Control</h5>
