--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                             <div class="inner-text">
                                 <h3 class=" color-dark no-margin-top">Bio</h3>
                                 <!-- FILL IN HERE -->
-                                <p>In my career, I lead by example. In doing so, I am driven to execute and deliver an end product to be proud of. Taking on what needs to be done and owning it through to the end and beyond is what I strive for whenever I am involved. This has allowed me to excel in many of my work projects, as well as my personal life as a total gearhead. I believe that with teamwork and personal responsibility, any team can achieve greatness. Please browse my professional and volunteer resume, and if there is any way I can help you or your organization, please contact me using the links below.</p>
+                                <p>I believe in living life with boundless passion— never shrinking from adventure or challenge. Each moment offers a chance to grow, laugh, love fiercely, and make meaningful connections. My journey is fueled by the drive to help others and leave the world better than I found it. I savor every mile driven fast, every bite of excellent food, and every horizon discovered. Life is an extraordinary adventure meant to be lived fully, embracing every twist and turn with a courageous spirit and a wide-open heart.</p>
                                 <p class="no-margin">
 
                                 </p>
