update index few job wordings

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                                             <i class="fa fa-desktop margin-right-5"></i>
                                             Certifications
                                         </strong>
-                                        : PMP, CSM, Atlassian Jira and Confluence Certified<br/>
+                                        : PMP, CSM, Atlassian Jira and Confluence Certified, SCCA, FIA ACC US<br/>
                                     </p>
                                 </div>
                             </div>
@@ -456,7 +456,7 @@
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">FF1S Podcast</h5>
                           <h5 class="text-uppercase color-dark">American Contributor</h5>
-                          <p>Report and color-commentary on Formula 1 races for the British podcast For Formula 1's Sake.</p>
+                          <p>As a color commentator for the British podcast For Formula 1's Sake, I brought the thrill, drama, and humor of the world's greatest motorsport to life for fans. It’s about capturing the essence of each lap, dissecting strategies, and offering insights that go beyond the track. I delivered humorous takes and an infectious passion for F1 that keeps listeners engaged and informed. Whether it’s breaking down the intricacies of a pit stop strategy or celebrating moments of pure racing brilliance, I made sure we fuel the love for Formula 1.</p>
                      </div>
                 </li> <li>
                      <div class="ic">
@@ -476,7 +476,7 @@
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">CIRCUIT OF THE AMERICAS</h5>
                           <h5 class="text-uppercase color-dark">Motorsport Club Event Race Control</h5>
-                          <p>Race control is responsible for monitoring and supervising track inspections, practice sessions, and races for club-level events. Monitoring 40+ cameras, replaying video, capturing all incident reports, conducting all paddock communications, managing pit lane activities, and coordinating all on track team members.</p>
+                          <p>Club-level race control is responsible for monitoring and supervising track inspections, practice sessions, and races for club-level events. Monitoring 40+ cameras, replaying video, capturing all incident reports, conducting all paddock communications, managing pit lane activities, and coordinating all on track team members.</p>
                      </div>
                 </li> 
                 <li>
@@ -487,7 +487,7 @@
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">MotoGP</h5>
                           <h5 class="text-uppercase color-dark">MotoGP Flag Race Control</h5>
-                          <p>Race control is responsible for monitoring and supervising track inspections, practice sessions, qualifying sessions and the race itself. Race Control is the observant nerve centre of every MotoGP event. By continuously monitoring, organizing, and directing hundreds of staff, Race Control make a safe and timely event possible.</p>
+                          <p>Global competition level race control is responsible for monitoring and supervising track inspections, practice sessions, qualifying sessions and the race itself. Race Control is the observant nerve centre of every MotoGP event. By continuously monitoring, organizing, and directing hundreds of staff, Race Control make a safe and timely event possible.</p>
                      </div>
                 </li>
                 <li>
