removed pup emoji, cleaned certs, fix year justification

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                                             <i class="fa fa-desktop margin-right-5"></i>
                                             Certifications
                                         </strong>
-                                        : PMP, CSM, Atlassian Jira and Confluence Certified, SCCA, FIA ACC US<br/>
+                                        : PMP, CSM, Jira/Confluence, SCCA, FIA ACC US<br/>
                                     </p>
                                 </div>
                             </div>
@@ -195,7 +195,7 @@
                                 </div>
                                 <div class="number font-alt">2023</div>
                                 <div class="desc">
-                                    <h5 class="text-uppercase color-dark text-bold">Asta  🐶 the World Traveling Woofer Visits Iceland</h5>
+                                    <h5 class="text-uppercase color-dark text-bold">Asta the World Traveling Woofer Visits Iceland</h5>
                                     <h5 class="text-uppercase color-dark">Author</h5>
                                     <p>Asta, an amazing little pup, travels the world and shares her adventures with children through these sweet books. In the first book, she travels around the wondrous island nation of Iceland in the beautiful, if chilly, north. She tells children about the new things she finds like the foods, animals, and geography of Iceland- and encourages them to travel themselves. 
                                     </p>
@@ -462,7 +462,7 @@
                      <div class="ic">
                         <i class="fa fa-lg fa-flag-checkered"></i>
                     </div>
-                     <div class="number font-alt">23/24</div>
+                     <div class="number font-alt my-right-align">2023/24</div>
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">Formula 1</h5>
                           <h5 class="text-uppercase color-dark">Intervention Marshal</h5>
