update years with new justification
 my-right-align

--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                      <div class="ic">
                         <i class="fa fa-lg fa-motorcycle"></i>
                     </div>
-                     <div class="number font-alt">22/23</div>
+                     <div class="number font-alt my-right-align">2022/23</div>
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">MotoGP</h5>
                           <h5 class="text-uppercase color-dark">MotoGP Flag Race Control</h5>
@@ -494,7 +494,7 @@
                      <div class="ic">
                         <i class="fa fa-lg fa-flag-checkered"></i>
                     </div>
-                     <div class="number font-alt">2021</div>
+                     <div class="number font-alt my-left-align">2021/2023</div>
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">CIRCUIT OF THE AMERICAS</h5>
                           <h5 class="text-uppercase color-dark">Flag Marshal</h5>
@@ -505,7 +505,7 @@
                      <div class="ic">
                         <i class="fa fa-lg fa-motorcycle"></i>
                     </div>
-                     <div class="number font-alt">2021</div>
+                     <div class="number font-alt my-right-align">2021/2024</div>
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">MOTO GP</h5>
                           <h5 class="text-uppercase color-dark">Track Marshal / Intervention</h5>
@@ -516,7 +516,7 @@
                      <div class="ic">
                         <i class=" fa fa-flag-checkered"></i>
                     </div>
-                     <div class="number font-alt">2019</div>
+                     <div class="number font-alt my-left-align">2019/2022</div>
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">PETROL LOUNGE</h5>
                           <h5 class="text-uppercase color-dark">Assistant General Manager</h5>
