--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
                      <div class="ic">
                           <i class="fa fa-drumstick-bite"></i>
                      </div>
-                     <div class="number font-alt">2022</div>
+                     <div class="number font-alt my-left-align">2022/24</div>
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">OPERATION TURKEY</h5>
                           <h5 class="text-uppercase color-dark">Kitchen Manager</h5>
@@ -607,7 +607,7 @@
                      <div class="ic">
                           <i class="fa fa-book"></i>
                      </div>
-                     <div class="number font-alt">2017</div>
+                     <div class="number font-alt my-right-align">2017/2023</div>
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">PFLUGERVILLE COMMUNITY LIBRARY</h5>
                           <h5 class="text-uppercase color-dark">Chairman of the Board</h5>
@@ -618,7 +618,7 @@
                      <div class="ic">
                           <i class="fa fa-tractor"></i>
                      </div>
-                     <div class="number font-alt">2018</div>
+                     <div class="number font-alt my-left-align">2018/20</div>
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">NATIONAL FFA ORGANIZATION</h5>
                           <h5 class="text-uppercase color-dark">Reporter</h5>
@@ -629,7 +629,7 @@
                      <div class="ic">
                           <i class="fa fa-certificate"></i>
                      </div>
-                     <div class="number font-alt">2015</div>
+                     <div class="number font-alt my-right-align">2015/2021</div>
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">TRAVIS COUNTY SHERRIFF'S OFFICE</h5>
                           <h5 class="text-uppercase color-dark">Citizens Academy Member</h5>
@@ -640,7 +640,7 @@
                      <div class="ic">
                           <i class="fa fa-certificate"></i>
                      </div>
-                     <div class="number font-alt">2011</div>
+                     <div class="number font-alt my-left-align">2011/2019</div>
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">PFLUGERVILLE POLICE DEPARTMENT</h5>
                           <h5 class="text-uppercase color-dark">Citizens on Patrol Team Member</h5>
@@ -651,7 +651,7 @@
                      <div class="ic">
                           <i class="fa fa-home"></i>
                      </div>
-                     <div class="number font-alt">2010</div>
+                     <div class="number font-alt my-right-align">2010/14</div>
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">NEIGHBORHOOD ASSOCIATION</h5>
                           <h5 class="text-uppercase color-dark">President, Block Captain</h5>
@@ -662,7 +662,7 @@
                      <div class="ic">
                           <i class="fa fa-motorcycle"></i>
                      </div>
-                     <div class="number font-alt">2006</div>
+                     <div class="number font-alt my-left-align">2006/16</div>
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">REPUBLIC OF TEXAS MOTORCYCLE RALLY</h5>
                           <h5 class="text-uppercase color-dark">Event Coordinator</h5>
@@ -673,7 +673,7 @@
                      <div class="ic">
                           <i class="fa fa-book"></i>
                      </div>
-                     <div class="number font-alt">2002</div>
+                     <div class="number font-alt my-right-align">2002/06</div>
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">TEXAS STATE LIBRARY AND ARCHIVES COMMISSION</h5>
                           <h5 class="text-uppercase color-dark">Texas Talking Book Program</h5>
