--- a/index.html
+++ b/index.html
@@ -434,6 +434,16 @@
                     </div>
                      <div class="number font-alt">2024</div>
                      <div class="desc">
+                          <h5 class="text-uppercase color-dark text-bold">My Personal Garage</h5>
+                          <h5 class="text-uppercase color-dark">Marketing, Sales, and Customer Engagement Manager</h5>
+                          <p>At MPG, I oversee marketing, sales, outreach, and customer engagement for a premier private automotive storage facility catering to car enthusiasts who value privacy and a top-tier customer experience. I develop personalized marketing strategies, build strong client relationships, and ensure every aspect of our services exceed expectations. From curating tailored solutions to fostering a welcoming environment for collectors and gearheads alike, I help drive MPG’s reputation as the ultimate haven for automotive passion and exclusivity.</p>
+                     </div>
+                <li>
+                     <div class="ic">
+                        <i class="fa fa-lg fa-flag-checkered"></i>
+                    </div>
+                     <div class="number font-alt">2024</div>
+                     <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">24 Hours of LeMons</h5>
                           <h5 class="text-uppercase color-dark">Driver</h5>
                           <p>The 24 Hours of Lemons race is an exciting mix of endurance, fun, and skill, with a heavy dose of humor and adaptability. Unlike traditional endurance racing, Lemons racing is centered on taking low-budget "lemon" cars—often valued at $500 or less—and pushing them through a grueling race. In the end, a 24 Hours of Lemons driver is equal parts racer, entertainer, and caretaker. Winning isn’t the main focus—it’s all about surviving the race, having a blast, and embracing the absurdity.</p>
