--- a/index.html
+++ b/index.html
@@ -472,10 +472,10 @@
                      <div class="ic">
                         <i class="fa fa-lg fa-flag-checkered"></i>
                     </div>
-                     <div class="number font-alt my-right-align">2023/24</div>
+                     <div class="number font-alt my-right-align">2023</div>
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">Formula 1</h5>
-                          <h5 class="text-uppercase color-dark">Intervention Marshal</h5>
+                          <h5 class="text-uppercase color-dark">Intervention Marshal | 2023 - 2024</h5>
                           <p>These often unsung volunteers are responsible for the safety and security of the action on track, being responsible for the drivers who are competing, and making sure members of the public stay at a safe distance. Marshals are right up close to the action, and are a vital part of anything that happens on track.r, and caretaker. Winning isn’t the main focus—it’s all about surviving the race, having a blast, and embracing the absurdity.</p>
                      </div>
                 </li><li>
@@ -493,10 +493,10 @@
                      <div class="ic">
                         <i class="fa fa-lg fa-motorcycle"></i>
                     </div>
-                     <div class="number font-alt my-right-align">2022/23</div>
+                     <div class="number font-alt my-right-align">2022</div>
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">MotoGP</h5>
-                          <h5 class="text-uppercase color-dark">MotoGP Flag Race Control</h5>
+                          <h5 class="text-uppercase color-dark">MotoGP Flag Race Control  | 2022 - 2024</h5>
                           <p>Global competition level race control is responsible for monitoring and supervising track inspections, practice sessions, qualifying sessions and the race itself. Race Control is the observant nerve centre of every MotoGP event. By continuously monitoring, organizing, and directing hundreds of staff, Race Control make a safe and timely event possible.</p>
                      </div>
                 </li>
@@ -504,10 +504,10 @@
                      <div class="ic">
                         <i class="fa fa-lg fa-flag-checkered"></i>
                     </div>
-                     <div class="number font-alt my-left-align">2021/23</div>
+                     <div class="number font-alt my-left-align">2021</div>
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">CIRCUIT OF THE AMERICAS</h5>
-                          <h5 class="text-uppercase color-dark">Flag Marshal</h5>
+                          <h5 class="text-uppercase color-dark">Flag Marshal | 2021 - 2023</h5>
                           <p>They are an integral part of the race, keeping the track clear, giving instructions to the drivers, and responding to incidents. These are the people who have the front row seats, with no-one getting any closer to the action unless they get their own racing car. They are highly trained to handle crashes, fire, the needs of drivers who may be injured, and track cleanup. They have other duties, too, including signalling the drivers with flags and keeping their sections of the track organized so that racing can proceed efficiently. When handling crashes and fires, these workers have been called the “shock troops” of racing, because until the ambulances, fire trucks, and crash/rescue vehicles arrive, the safety and efficiency of the track is in their hands.</p>
                      </div>
                 </li>
@@ -515,10 +515,10 @@
                      <div class="ic">
                         <i class="fa fa-lg fa-motorcycle"></i>
                     </div>
-                     <div class="number font-alt my-right-align">2021/24</div>
+                     <div class="number font-alt my-right-align">2021</div>
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">MOTO GP</h5>
-                          <h5 class="text-uppercase color-dark">Track Marshal / Intervention</h5>
+                          <h5 class="text-uppercase color-dark">Track Marshal / Intervention | 2021 - 2023</h5>
                           <p>During MotoGP racing, qualifying, and practices, provide flagging communication in coordination with Race Control, assist off riders, clear the track of bikes and debris</p>
                      </div>
                 </li>
@@ -526,10 +526,10 @@
                      <div class="ic">
                         <i class=" fa fa-flag-checkered"></i>
                     </div>
-                     <div class="number font-alt my-left-align">2019/22</div>
+                     <div class="number font-alt my-left-align">2019</div>
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">PETROL LOUNGE</h5>
-                          <h5 class="text-uppercase color-dark">Assistant General Manager</h5>
+                          <h5 class="text-uppercase color-dark">Assistant General Manager | 2019 - 2022</h5>
                           <p>Assist customers in leaving and picking up their vehicles, Office management, document and inventory creation and management, Work with vendors to facilitate detailing, mechanical servicing, inspections</p>
                      </div>
                 </li>
