--- a/index.html
+++ b/index.html
@@ -189,7 +189,22 @@
                         <!-- FILL IN HERE -->
                         <!-- RESUME -->
                         <ul class="list-unstyled clearfix">
-                            <li>
+							<li>
+							   <div class="ic">
+							      <i class="fa fa-desktop"></i>
+							   </div>
+							   <div class="number font-alt">2025</div>
+							   <div class="desc">
+							      <h5 class="text-uppercase color-dark text-bold">XALT</h5>
+							      <h5 class="text-uppercase color-dark">Atlassian Consultant | Digital Transformation | 2025 - Present</h5>
+							      <p>As an Atlassian Consultant, I help organizations streamline workflows, optimize processes, and maximize their investment in Atlassian tools. I specialize in implementing and customizing Jira and Confluence to meet enterprise needs, ensuring teams work more efficiently and collaboratively.</p>
+							      <p>• Designing and implementing Atlassian solutions</p>
+							      <p>• Leading client workshops and gathering requirements</p>
+							      <p>• Configuring and customizing Jira for enterprise-scale needs</p>
+								  <p>• reating documentation and training materials to empower teams</p>
+							      <p>With a deep understanding of Agile methodologies and process optimization, I bring strong project management and consulting expertise to every engagement. My goal is to drive digital transformation and help clients unlock the full potential of their technology stack.</p>
+							    </div>
+							</li><li>
                                 <div class="ic">
                                     <i class="fa fa-book"></i>
                                 </div>
