--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 							      <p>• Designing and implementing Atlassian solutions</p>
 							      <p>• Leading client workshops and gathering requirements</p>
 							      <p>• Configuring and customizing Jira for enterprise-scale needs</p>
-								  <p>• reating documentation and training materials to empower teams</p>
+								  <p>• Creating documentation and training materials to empower teams</p>
 							      <p>With a deep understanding of Agile methodologies and process optimization, I bring strong project management and consulting expertise to every engagement. My goal is to drive digital transformation and help clients unlock the full potential of their technology stack.</p>
 							    </div>
 							</li><li>
