Added YT Channels

--- a/index.html
+++ b/index.html
@@ -160,10 +160,15 @@
                                         </strong>
                                         : www.dawnjanacek.com<br/>
                                         <strong class="fix-width-150">
+                                            <i class="fa fa-globe margin-right-5"></i>
+                                            YouTube Channels
+                                        </strong>
+                                        : GoGirlGo Speed, GoGirlGo Travel, GoGirlGo Art<br/>
+                                        <strong class="fix-width-150">
                                             <i class="fa fa-desktop margin-right-5"></i>
                                             Certifications
                                         </strong>
-                                        : PMP, CSM, Jira/Confluence, SCCA, FIA ACC US<br/>
+                                        : PMP, CSM, Jira/Confluence/JSM, SCCA, FIA ACC US<br/>
                                     </p>
                                 </div>
                             </div>
