Removed word "channels"

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                                         : www.dawnjanacek.com<br/>
                                         <strong class="fix-width-150">
                                             <i class="fa fa-globe margin-right-5"></i>
-                                            YouTube Channels
+                                            YouTube
                                         </strong>
                                         : GoGirlGo Speed, GoGirlGo Travel, GoGirlGo Art<br/>
                                         <strong class="fix-width-150">
