Added Long Center and made Oper Turky better

--- a/index.html
+++ b/index.html
@@ -622,6 +622,17 @@
             <!-- FILL IN HERE -->
             <!-- VOLUNTEERING -->
             <ul class="list-unstyled clearfix">
+                  <li>
+                      <div class="ic">
+                           <i class="fa fa-drumstick-bite"></i>
+                      </div>
+                      <div class="number font-alt my-left-align">2023/25</div>
+                      <div class="desc">
+                           <h5 class="text-uppercase color-dark text-bold">LONG CENTER FOR PERFROMING ARTS</h5>
+                           <h5 class="text-uppercase color-dark">Usher</h5>
+                           <p>As a volunteer usher at the Long Center for the Performing Arts in Austin, I have the privilege of supporting a variety of world-class performances, including opera, ballet, symphony concerts, and special events. I help create a welcoming and organized environment for patrons by assisting with seating, providing program information, and ensuring a positive experience for all guests. Volunteering at the Long Center allows me to stay connected to Austin’s vibrant arts scene while contributing to the success of each performance.</p>
+                      </div>
+                 </li>
                  <li>
                      <div class="ic">
                           <i class="fa fa-drumstick-bite"></i>
@@ -630,7 +641,7 @@
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">OPERATION TURKEY</h5>
                           <h5 class="text-uppercase color-dark">Kitchen Manager</h5>
-                          <p>Coordinated the running of the North Austin kitchen and staff serving thousands of meals to the less fortunate across Austin, Texas on Thanksgiving Day.</p>
+                          <p>Each year, I take on the role of running the kitchen for Operation Turkey in North Austin, helping to organize and prepare hundreds of hot Thanksgiving meals for those in need. I oversee a team of volunteers, coordinate food preparation, and ensure everything runs smoothly under tight timelines. It’s a rewarding opportunity to give back to the community, provide comfort to others during the holidays, and be part of a mission focused on compassion and service.</p>
                      </div>
                 </li>
                 <li>
