fixed vol years and added masks icon

--- a/index.html
+++ b/index.html
@@ -624,9 +624,9 @@
             <ul class="list-unstyled clearfix">
                   <li>
                       <div class="ic">
-                           <i class="fa fa-drumstick-bite"></i>
+                           <i class="fa fa-masks-theater"></i>
                       </div>
-                      <div class="number font-alt my-left-align">2023/25</div>
+                      <div class="number font-alt my-left-align">23/25</div>
                       <div class="desc">
                            <h5 class="text-uppercase color-dark text-bold">LONG CENTER FOR PERFROMING ARTS</h5>
                            <h5 class="text-uppercase color-dark">Usher</h5>
@@ -637,7 +637,7 @@
                      <div class="ic">
                           <i class="fa fa-drumstick-bite"></i>
                      </div>
-                     <div class="number font-alt my-left-align">2022/24</div>
+                     <div class="number font-alt my-left-align">22/24</div>
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">OPERATION TURKEY</h5>
                           <h5 class="text-uppercase color-dark">Kitchen Manager</h5>
@@ -648,7 +648,7 @@
                      <div class="ic">
                           <i class="fa fa-book"></i>
                      </div>
-                     <div class="number font-alt my-right-align">2017/23</div>
+                     <div class="number font-alt my-right-align">17/23</div>
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">PFLUGERVILLE COMMUNITY LIBRARY</h5>
                           <h5 class="text-uppercase color-dark">Chairman of the Board</h5>
@@ -659,7 +659,7 @@
                      <div class="ic">
                           <i class="fa fa-tractor"></i>
                      </div>
-                     <div class="number font-alt my-left-align">2018/20</div>
+                     <div class="number font-alt my-left-align">18/20</div>
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">NATIONAL FFA ORGANIZATION</h5>
                           <h5 class="text-uppercase color-dark">Reporter</h5>
@@ -670,7 +670,7 @@
                      <div class="ic">
                           <i class="fa fa-certificate"></i>
                      </div>
-                     <div class="number font-alt my-right-align">2015/21</div>
+                     <div class="number font-alt my-right-align">15/21</div>
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">TRAVIS COUNTY SHERRIFF'S OFFICE</h5>
                           <h5 class="text-uppercase color-dark">Citizens Academy Member</h5>
@@ -681,7 +681,7 @@
                      <div class="ic">
                           <i class="fa fa-certificate"></i>
                      </div>
-                     <div class="number font-alt my-left-align">2011/19</div>
+                     <div class="number font-alt my-left-align">11/19</div>
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">PFLUGERVILLE POLICE DEPARTMENT</h5>
                           <h5 class="text-uppercase color-dark">Citizens on Patrol Team Member</h5>
@@ -692,7 +692,7 @@
                      <div class="ic">
                           <i class="fa fa-home"></i>
                      </div>
-                     <div class="number font-alt my-right-align">2010/14</div>
+                     <div class="number font-alt my-right-align">10/14</div>
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">NEIGHBORHOOD ASSOCIATION</h5>
                           <h5 class="text-uppercase color-dark">President, Block Captain</h5>
@@ -703,7 +703,7 @@
                      <div class="ic">
                           <i class="fa fa-motorcycle"></i>
                      </div>
-                     <div class="number font-alt my-left-align">2006/16</div>
+                     <div class="number font-alt my-left-align">06/16</div>
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">REPUBLIC OF TEXAS MOTORCYCLE RALLY</h5>
                           <h5 class="text-uppercase color-dark">Event Coordinator</h5>
@@ -714,7 +714,7 @@
                      <div class="ic">
                           <i class="fa fa-book"></i>
                      </div>
-                     <div class="number font-alt my-right-align">2002/06</div>
+                     <div class="number font-alt my-right-align">02/06</div>
                      <div class="desc">
                           <h5 class="text-uppercase color-dark text-bold">TEXAS STATE LIBRARY AND ARCHIVES COMMISSION</h5>
                           <h5 class="text-uppercase color-dark">Texas Talking Book Program</h5>
