--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 							    </div>
 							</li><li>
                                 <div class="ic">
-                                    <i class="fa fa-book"></i>
+                                    <i class="fa fa-pen-typewriter"></i>
                                 </div>
                                 <div class="number font-alt">2023</div>
                                 <div class="desc">
@@ -480,7 +480,7 @@
                      </div>
                 </li> <li>
                      <div class="ic">
-                        <i class="fa fa-lg fa-flag-checkered"></i>
+                        <i class="fa fa-lg fa-microphone"></i>
                     </div>
                      <div class="number font-alt">2023</div>
                      <div class="desc">
